--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous" />
+  <style>
+    .container{
+      border: 1px solid grey;
+      border-radius: 15px;
+      margin-top: 50px;
+      width: 900px;
+      background:rgb(242, 199, 242);
+    }
+    h1{
+      text-align: center;
+      color: blue;
+    }
+    .btn{
+      font-size: 18px;
+    }
+    .result{
+      display: inline-block;
+      border: 1px solid rgb(89, 198, 248);
+      background-color: aliceblue;
+      padding-left: 10px;
+      width: 500px;
+      border-radius: 5px;
+      padding: 5px;
+    }
+    </style>
 </head>
 <body>
-  
+  <div class="container">
+  <div class="head mt-4 fs-4"> <h1 >To Do App</h1></div>
+  <div class="main">
+    <form action="">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Please, enter your tasks"  id="inputText">
+        <button class="btn btn-outline-primary" type="button" id="button">Add</button>
+      </div>
+    </form>
+  </div>
+  <div class="task-list" id="tasks">
+    
+</div>
 </body>
+<script src="app.js"></script>
 </html>
